<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnCreateStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_student"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnStudentList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_list"
        app:layout_constraintTop_toBottomOf="@id/btnCreateStudent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
