<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:contentDescription="@string/student_item_card_desc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvStudentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_info_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/update"
                android:minWidth="64dp"
                android:minHeight="48dp"

                android:textColor="@color/onPrimaryColor"
                android:backgroundTint="@color/primaryColor"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/delete"
                android:layout_marginStart="16dp"
                android:minWidth="64dp"
                android:minHeight="48dp"

                android:textColor="@color/onPrimaryColor"
                android:backgroundTint="@color/primaryColor"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
